FIX: app wrapper expands
The app wrapper will now expand its minimum height & width to fit large grids, rather than letting the grid spill over onto the background.

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ body{
 #daGrid{
     position: absolute;
     left: 325px;
-    top:25px;
+    top: 50px;
 }
 
 .square, .furnitureLeg{  /*for squares on the grid*/
